# 3d_U1_parallel

./: .gitignore  CMakeLists.txt  Makefile  README.md  createjobs.sh
app/: main.F90  main.f90
doc/: flow_diagrams.tex
input/: create_parameters.sh  include  input_parameters.nml
src/: U1_functions.F90  U1_functions.f90  arrays.F90  arrays.f90  check_files_directories.F90  constants.F90  dynamics.F90  dynamics.f90  files.F90  hybridMC.F90  indices.F90  indices.f90  lua.F90  lua.f90  matlib.F90  parallel_utils.F90  parameters.F90  parameters.f90  pbc.F90  save_configurations.F90
test/: test.f90
